src/css/modules/_footer.scss
@use "../setup";

/* Footer
   ========================================================================== */

/**
 * Footer content area.
 *
 * Example HTML:
 *
 * <body>
 *     <header class="txp-header"></header>
 *     <main class="txp-body"></main>
 *     <footer class="txp-footer">
 *         Content
 *     </footer>
 * </body>
 */

.txp-footer {
    display: flex;
    justify-content: flex-end;

    > * {
        margin-inline-start: 1rem;
    }
}

